[package]
name = "k-means"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
csv = "1.2.1"
float-ord = "0.3.2"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
smallvec = { version = "1.10.0", features = ["const_generics"] }
to_vec = "0.1.0"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
